--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -373,7 +373,7 @@
                                                                 <label class="col-form-label" for="assessment-no">Assessment No</label>
                                                             </div>
                                                             <div class="col-8">
-                                                                <input class="form-control form-control-sm" id="assessment-no" name="AssessmentNo" value="" required>
+                                                                <input class="form-control form-control-sm" id="assessment-no" name="AssessmentNo" value="">
                                                             </div>
                                                         </div>
                                                         <div class="row g-3 align-items-center single-field">
