update log & date

--- a/Riskvalve/Views/Tool/ImportAssessment.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssessment.cshtml
@@ -67,6 +67,7 @@
                         });
                     },
                     error: function (xhr, status, error) {
+                        console.log(xhr.responseText)
                         alert('Error submitting the form')
                     }
                 });
