--- a/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
+++ b/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
@@ -106,6 +106,7 @@
                         });
                     },
                     error: function (xhr, status, error) {
+                        console.log(xhr.responseText)
                         alert('Error submitting the form')
                     }
                 });
@@ -128,6 +129,7 @@
                         });
                     },
                     error: function (xhr, status, error) {
+                        console.log(xhr.responseText)
                         alert('Error submitting the form')
                     }
                 });
