--- a/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
@@ -68,6 +68,7 @@
                         });
                     },
                     error: function (xhr, status, error) {
+                        console.log(xhr.responseText)
                         alert('Error submitting the form')
                     }
                 });
